*Karte überarbeitet* - gehen funktioniert - generieren funktioniert - Zellentyp Wasser hinzugefügt - Position als Value Object (Mit Overrides damit gleiche Parameter auch für gleiche Klassenobjekte sorgen) - Exceptions als Methode um alle Visualisierungem in der Spiel Logik umzusetzen